# RaaS

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  main.py
app/agent/: __init__.py  graph.py  nodes.py  state.py  tools.py
app/api/: __init__.py  insights.py  stream.py
app/auth/: __init__.py  dependencies.py  jwt_auth.py  routes.py
app/guardrails/: __init__.py  acl.py  events.py  injection.py  pii.py
app/observability/: __init__.py  langfuse_setup.py  request_trace.py
app/providers/: __init__.py  azure_stub.py  base.py  bedrock_stub.py  deepseek.py  factory.py  gemini.py  pricing.py  smoke_test.py
app/rag/: __init__.py  chunking.py  embeddings.py  ingest.py  metadata.py  rerank.py  retrieve.py  store.py
docs/: eval_report.md
eval/: __init__.py  common.py  golden_dataset.json  llm_judge.py  retrieval_eval.py  run_ragas.py
eval/results/: 20260702T211447Z_generation_api.json  20260702T212119Z_retrieval_api.json  20260702T212131Z_retrieval_api.json  20260703T152422Z_generation_api.json
n8n/: ingestion_workflow.json
sample_docs/: hr_policy_acme.md
sample_docs/evalcorp/: archive_2023_leave_policy.md  archive_2023_travel_policy.md  leave_policy.md  (+4 more)
tests/: conftest.py  test_acl.py  test_auth_dependencies.py  test_auth_routes.py  test_e2e.py  test_injection.py  test_jwt_auth.py  test_pii.py
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
(+11 files in other folders)
