[project]
name = "raas"
version = "0.1.0"
description = "Self-hostable, multi-tenant, fully-instrumented agentic RAG backend."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
